# SwiftyTextEffects

./: .gitignore  README.md
MarkdownPreview/MarkdownPreview/: ContentView.swift
MarkdownPreview/MarkdownPreview.xcodeproj/: project.pbxproj
MarkdownPreview/Source/: Main.swift  samples.swift
MarkdownPreview/SwiftyMarkdownPreview.xcodeproj/: project.pbxproj
SwiftyDebug/: Package.swift
SwiftyDebug/Source/: PrettyTree.swift
SwiftyDebug/Source/Extensions/: Array.swift  String.swift
SwiftyDebug/Tests/SwiftyDebugTests/: SwiftyDebugTests.swift
SwiftyDesignFramework/: Package.swift
SwiftyDesignFramework/Source/: LX.types.swift  X.styling.swift  X.swift
SwiftyDesignFramework/Source/Data/: X.Color.swift  X.ColorMap.swift  X.Font.swift
SwiftyDesignFramework/Source/Views/: X.CardGallery.swift  X.DataBus.swift  X.JustifiedText.swift  X.Panel.swift  X.StringTagList.swift  X.TabGroups.swift  X.WrapView.swift  (+1 more)
SwiftyMarkdown/: Package.swift
SwiftyParsec/: Package.swift  README.md
SwiftyParsec/Source/: IO.Parser.swift  IO.State.swift  IO.swift
SwiftyTextEffects.xcworkspace/: contents.xcworkspacedata
SwiftyUtils/: Package.swift
swifty-crates/: Cargo.toml
swifty-crates/markdown-parser/: Cargo.toml
swifty-crates/markdown-parser/src/: lib.rs  main.rs  parser.rs  text.rs
swifty-crates/samples/: general-1.md  misc-html-1.html  misc-markdown-1.md  misc-markdown-2.md
swifty-crates/tree-formatter/: Cargo.toml  README.md
swifty-crates/tree-formatter/examples/: document.rs  expressions.rs  html-tree.rs
swifty-crates/tree-formatter/src/: formatter.rs  lib.rs
(+52 files in other folders)
