[package]
name = "markdown-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.11.0"
itertools = "0.12.1"
im-lists = "0.8.1"
either = "1.10.0"
colored = "2.1.0"

[dependencies.tree-formatter]
path = "../tree-formatter"