[package]
name = "tree-formatter"
version = "0.4.0"
edition = "2021"

[dependencies]
colored = "2.1.0" # TERMINAL COLORS

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", features = ["preserve_order"], optional = true }
indexmap = { version = "2", features = ["serde"], optional = true }

# [features]
# default = [ "serde", "serde_json", "indexmap" ]
# serde = [ "serde" ]
# serde_json = [ "serde_json" ]
# indexmap = [ "indexmap" ]
